--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,26 +1,26 @@
 # Set this website's info
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
-url: "https://coffeebank.github.io"
-baseurl: "/moonrise"
+url: "https://mrspidercat.github.io"
+baseurl: "/Loyal-MC-Site"
 siteIcon: /media/android-chrome-192x192.png
-siteYear: 2020
+siteYear: 2021
 siteFooterlink: /about
 showinSearchEngines: true
 # googleAnalyticsID: (uncomment to use)
 
 
 # Set basic server info
-serverName: Moonrise MC
-serverDescription: A Minecraft server where we have lots of fun!
-serverIP: 31.41.59.26:5358
+serverName: Loyal MC
+serverDescription: Loyal MC is a Bedrock Edition and Java Edition Crossplay survival server that allows for both Minecraft editions to play together!  
+serverIP: play.loyalmc.net
 useBedrockForOnlineStatus: false
 
 
 # Discord information
-discordInvite: https://discord.gg/minecraft
-discordServerID: 299881420891881473
-discordChannelID: 450428756855750666
+discordInvite: https://discord.gg/DpcBUveEta
+discordServerID: 776591490872639519
+discordChannelID: 851827665350688838
 
 
 # # Navbar Links at the top of the page (uncomment "siteNav" to use)
