--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-url: "https://mrspidercat.github.io"
+url: "https://loyalmc.net"
 baseurl: "/Loyal-MC-Site"
 siteIcon: /media/android-chrome-192x192.png
 siteYear: 2021
