--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 url: "https://loyalmc.net"
-baseurl: "/Loyal-MC-Site"
+baseurl: ""
 siteIcon: /media/android-chrome-192x192.png
 siteYear: 2021
 siteFooterlink: /about
