--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@ useBedrockForOnlineStatus: false
 
 
 # Discord information
-discordInvite: https://discord.gg/DpcBUveEta
+discordInvite: https://discord.gg/vQJGyUJMRh
 discordServerID: 776591490872639519
 discordChannelID: 926562437992415272
 
